Fix misaligned interaction icon for removing an item from a collection

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
@@ -110,6 +110,5 @@
   line-height: $inputHeight;
   position: absolute;
   right: 31px;
-  top: -6px;
   z-index: 1;
 }
